TypedQuery swagger bugfix & users api 경로 수정 & application 코드 수정
