# swagger.json
@@ -209,7 +209,7 @@
         ]
       }
     },
-    "/user/{user_id}": {
+    "/users/{user_id}": {
       "get": {
         "tags": [
           "user"
@@ -240,7 +240,7 @@
           }
         },
         "description": "",
-        "x-nestia-namespace": "user.getPublicProfile",
+        "x-nestia-namespace": "users.getPulicProfile",
         "x-nestia-jsDocTags": [
           {
             "name": "tag",
@@ -453,6 +453,46 @@
         ],
         "x-typia-jsDocTags": []
       },
+      "IUserUsecase.UpdateData": {
+        "type": "object",
+        "properties": {
+          "username": {
+            "type": "string",
+            "nullable": false,
+            "x-typia-required": false
+          },
+          "address": {
+            "type": "string",
+            "nullable": true,
+            "x-typia-required": false
+          },
+          "phone": {
+            "type": "string",
+            "nullable": true,
+            "x-typia-metaTags": [
+              {
+                "kind": "pattern",
+                "value": "^010-[0-9]{4}-[0-9]{4}$"
+              }
+            ],
+            "x-typia-jsDocTags": [
+              {
+                "name": "pattern",
+                "text": [
+                  {
+                    "text": "^010-[0-9]{4}-[0-9]{4}$",
+                    "kind": "text"
+                  }
+                ]
+              }
+            ],
+            "x-typia-required": false,
+            "pattern": "^010-[0-9]{4}-[0-9]{4}$"
+          }
+        },
+        "nullable": false,
+        "x-typia-jsDocTags": []
+      },
       "UserSchema.Public": {
         "type": "object",
         "properties": {
@@ -515,47 +555,19 @@
           "username"
         ],
         "x-typia-jsDocTags": []
-      },
-      "IUserUsecase.UpdateData": {
-        "type": "object",
-        "properties": {
-          "username": {
-            "type": "string",
-            "nullable": false,
-            "x-typia-required": false
-          },
-          "address": {
-            "type": "string",
-            "nullable": true,
-            "x-typia-required": false
-          },
-          "phone": {
-            "type": "string",
-            "nullable": true,
-            "x-typia-metaTags": [
-              {
-                "kind": "pattern",
-                "value": "^010-[0-9]{4}-[0-9]{4}$"
-              }
-            ],
-            "x-typia-jsDocTags": [
-              {
-                "name": "pattern",
-                "text": [
-                  {
-                    "text": "^010-[0-9]{4}-[0-9]{4}$",
-                    "kind": "text"
-                  }
-                ]
-              }
-            ],
-            "x-typia-required": false,
-            "pattern": "^010-[0-9]{4}-[0-9]{4}$"
-          }
-        },
-        "nullable": false,
-        "x-typia-jsDocTags": []
+      }
+    },
+    "securitySchemes": {
+      "bearer": {
+        "type": "apiKey",
+        "name": "Authorization",
+        "in": "header"
       }
     }
-  }
+  },
+  "security": [
+    {
+      "bearer": []
+    }
+  ]
 }
